--- a/admin-style.css
+++ b/admin-style.css
@@ -6,7 +6,7 @@
 .my-import-form,
 .my-export-form {
     margin-top: 20px;
-    background: #f1f1f1;
+    /*background: #f1f1f1;*/
     padding: 20px;
     border-radius: 5px;
     display: inline-block;
