--- a/css/subscription-form-styles.css
+++ b/css/subscription-form-styles.css
@@ -13,7 +13,7 @@
 
 #subscriber-form button {
     padding: 10px;
-    background-color: #0073aa;
+    background-color: rgb(6, 106, 171);
     color: white;
     border: none;
     cursor: pointer;
@@ -24,5 +24,10 @@
 }
 
 #form-message {
+    width: 100%;
+    margin-bottom: 0;
+    text-align: center;
     margin-top: 10px;
+    padding: 5px;
+    box-sizing: border-box;
 }
